# bootdev-ai-agent

./: .gitignore  Dockerfile.sandbox_executor  Makefile  README.md  docker-compose.yaml  export-env.sh  main.py  pyproject.toml  tests.py
.github/workflows/: python-app.yml
calculator/: lorem.txt  main.py
calculator/pkg/: calculator.py  render.py
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
