[project]
name = "bootdev-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "flake8>=7.3.0",
    "pyinstaller>=6.17.0",
]
